log/build_2025-03-10_12-56-24/pid_control_node/stderr.log
  File "/home/batch9/ros2_ws/install/pid_control_node/lib/python3.12/site-packages/pid_control_node/pid_control.py", line 110
    pwm[i]=int(ans)*int(speeds[i]/abs(speeds[i])
                       ^
SyntaxError: '(' was never closed

